--- a/README
+++ b/README
@@ -5,12 +5,25 @@ VERSION
     0.01
 
 DESCRIPTION
+    Transmission::Client is the main module in a collection of modules to
+    communicate with Transmission. Transmission is:
+
+     Transmission is a cross-platform BitTorrent client that is:
+      * Easy
+      * Lean
+      * Native
+      * Powerful
+      * Free
+
+    If you want to communicate with "transmission-daemon", this is a module
+    which can help you with that.
+
     The documentation is half copy/paste from the Transmission RPC spec:
     <http://trac.transmissionbt.com/browser/trunk/doc/rpc-spec.txt>
 
     This module differs from P2P::Transmission in (at least) two ways: This
-    one use Moose and it won't die or confess, which is especially annoying
-    in the constructor.
+    one use Moose and it won't die. The latter is especially annoying in the
+    constructor.
 
 SYNOPSIS
      use Transmission::Client;
@@ -32,7 +45,8 @@ SYNOPSIS
      print $client->session->download_dir, "\n";
 
 SEE ALSO
-    Transmission::AttributeRole
+    Transmission::AttributeRole Transmission::Session Transmission::Torrent
+    Transmission::Utils
 
 ATTRIBUTES
   url
@@ -163,7 +177,7 @@ METHODS
      ------------+-------------------------------------------------
      ids         | array      torrent list, as described in 3.1
                  |            this is optional
-     eager_read  | will create objects with as much data as possible.
+     lazy_read   | will create objects with as little data as possible.
 
     List context
         Returns a list of Transmission::Torrent objects and sets the
