--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Transmission-Client
 
+0.06
+       - Fix RT62805: methods given to rpc() can contain both
+         underscores and hyphens.
+
 0.05     Sat May 29 22:27:02 CEST 2010
        - Fix RT57970: username() and password() does not work
 
