--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Transmission-Client
 
+0.0701   Mon Jul 22 19:31:56 CEST 2013
+       - Fix build failure introduced in 0.07
+       - New maintainer: Olof Johansson <olof@cpan.org>
+
 0.07     Sat Jul 20 00:40:58 2013
        - Fix test failures due to hash randomization (RT #81561)
          Merge pull request #3 from afresh1/master
