--- a/Changes
+++ b/Changes
@@ -1,5 +1,13 @@
 Revision history for Transmission-Client
 
+0.08     Fri Aug 16 17:28:12 CEST 2013
+       - Improvements in type coercions for numeric types
+
+         Numeric types that got encoded in JSON as strings were
+         silently ignored by Transmission. Now we make sure that
+         they are converted to numeric types (SVp_IOK | SVp_NOK),
+         regardless of input.
+
 0.0701   Mon Jul 22 19:31:56 CEST 2013
        - Fix build failure introduced in 0.07
        - New maintainer: Olof Johansson <olof@cpan.org>
