--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 Revision history for Transmission-Client
 
+0.0802   Wed Aug 21 17:49:02 CEST 2013
+       - Update types of Transmission::Torrent attributes
+
+         With the stricter type coercions introduced with 0.08, types
+         specified in the transmission rpc spec to be doubles were
+         truncated to integers. This is now fixed.
+
 0.0801   Sat Aug 17 10:53:07 CEST 2013
        - Don't use the defined or operator (//). It's only available
          since perl 5.10.0. Fixes test failures.
