--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,9 @@
-Original author: Jan Henning Thorsen <jhthorsen@cpan.org>
+Transmission::Client was originally written by Jan Henning Thorsen.
+
 Current maintainer: Olof Johansson <olof@cpan.org>
 
 Contributors:
+ Jan Henning Thorsen
+ Olof Johansson
  Andrew Fresh
+ Yanick Champoux
